--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.25.4",
     "convert-csv-to-json": "^3.4.0",
+    "date-fns": "^4.1.0",
     "next": "^15.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
