--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "date-fns": "^4.1.0",
     "next": "^15.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
