--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.25.4",
-    "convert-csv-to-json": "^3.4.0",
+    "csvtojson": "^2.0.10",
     "date-fns": "^4.1.0",
+    "jotai": "^2.12.5",
     "next": "^15.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
