--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "jotai": "^2.12.5",
     "next": "^15.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swr": "^2.3.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20",
+    "@types/node": "^22.15.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9",
