--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@ant-design/colors": "^7.2.1",
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
-    "antd": "^5.25.4",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "antd": "^5.26.0",
     "csvtojson": "^2.0.10",
     "date-fns": "^4.1.0",
     "jotai": "^2.12.5",
     "next": "^15.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
