--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.26.0",
     "csvtojson": "^2.0.10",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "jotai": "^2.12.5",
     "next": "^15.3.3",
     "react": "^19.1.0",
