--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.26.0",
     "csvtojson": "^2.0.10",
     "date-fns": "^4.1.0",
